# src/main/resources/dx/Swagger.schema.yml
@@ -15,7 +15,7 @@ paths:
         - in: body
           name: GameProperties
           schema:
-            $ref: 'schema/message/GameCreate.schema.json'
+            $ref: 'schema/types/GameInfo.schema.json'
       responses:
         '201':
           description: Game Created
@@ -27,6 +27,29 @@ paths:
           schema:
             description: the error message
             type: string
+
+  /api/game/info:
+    get:
+      summary: Obtain info on an active Game Session
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: SessionId
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Game Found
+          schema:
+            $ref: 'schema/types/GameInfo.schema.json'
+        '404':
+          description: Game not Found
+          schema:
+            type: null
+
   /api/game/clicked:
     post:
       summary: Notify the Backend of a player clicking on the board
@@ -40,6 +63,7 @@ paths:
       responses:
         '200':
           description: Click accepted
+
   /api/themes:
     get:
       summary: Lists all available themes
@@ -50,6 +74,7 @@ paths:
           description: List of available themes
           schema:
             $ref: 'schema/message/Themes.schema.json'
+
   /api/modes:
     get:
       summary: Lists all available game-modes
